--- a/WaFI/Base.lproj/Main.storyboard
+++ b/WaFI/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -56,9 +57,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="vnh-nt-7oj" firstAttribute="top" secondItem="JJf-dh-4ws" secondAttribute="top" constant="5" id="8TY-gu-UOr"/>
-                            <constraint firstItem="JJf-dh-4ws" firstAttribute="trailing" secondItem="vnh-nt-7oj" secondAttribute="trailing" constant="16" id="QwV-zW-oyn"/>
-                            <constraint firstItem="vnh-nt-7oj" firstAttribute="leading" secondItem="Ndn-A6-Lm4" secondAttribute="leading" constant="16" id="ifP-Xf-v2O"/>
+                            <constraint firstItem="vnh-nt-7oj" firstAttribute="top" secondItem="JJf-dh-4ws" secondAttribute="top" constant="5" id="Hds-Jt-MO9"/>
+                            <constraint firstItem="vnh-nt-7oj" firstAttribute="trailing" secondItem="Ndn-A6-Lm4" secondAttribute="trailingMargin" id="NBI-uh-188"/>
+                            <constraint firstItem="vnh-nt-7oj" firstAttribute="leading" secondItem="Ndn-A6-Lm4" secondAttribute="leadingMargin" id="SKG-J5-uN6"/>
+                            <constraint firstItem="JJf-dh-4ws" firstAttribute="bottom" secondItem="vnh-nt-7oj" secondAttribute="bottom" constant="110" id="VJP-Dv-WRs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="JJf-dh-4ws"/>
                     </view>
@@ -75,16 +77,16 @@
         <scene sceneID="2co-1b-hFE">
             <objects>
                 <tableViewController id="xwz-5c-4la" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="bug-Uo-xzh">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="bug-Uo-xzh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="uMj-5L-rqc">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uMj-5L-rqc" id="Dyp-aa-IQ0">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
