--- a/WaFI/Base.lproj/Main.storyboard
+++ b/WaFI/Base.lproj/Main.storyboard
@@ -24,43 +24,51 @@
                                 <rect key="frame" x="16" y="69" width="343" height="488"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o8X-QA-iWF">
-                                        <rect key="frame" x="150.5" y="0.0" width="42" height="20.5"/>
+                                        <rect key="frame" x="150.5" y="0.0" width="42" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="SYY-Ch-TRH"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Jtc-LC-JDC">
-                                        <rect key="frame" x="11.5" y="25.5" width="320" height="216"/>
+                                        <rect key="frame" x="12" y="26" width="319" height="216"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="216" id="drq-r8-uXj"/>
+                                        </constraints>
                                         <date key="date" timeIntervalSinceReferenceDate="549769674.93216097">
                                             <!--2018-06-04 01:47:54 +0000-->
                                         </date>
                                     </datePicker>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0f-op-YTD">
-                                        <rect key="frame" x="150.5" y="246.5" width="42" height="20.5"/>
+                                        <rect key="frame" x="150.5" y="247" width="42" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="wje-KP-R7z"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Rwm-pY-wUu">
-                                        <rect key="frame" x="11.5" y="272" width="320" height="216"/>
+                                        <rect key="frame" x="12" y="273" width="319" height="215"/>
                                         <date key="date" timeIntervalSinceReferenceDate="549769690.49266601">
                                             <!--2018-06-04 01:48:10 +0000-->
                                         </date>
                                     </datePicker>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Rwm-pY-wUu" firstAttribute="top" secondItem="d0f-op-YTD" secondAttribute="bottom" constant="5" id="91d-vV-vxs"/>
-                                    <constraint firstItem="Jtc-LC-JDC" firstAttribute="top" secondItem="o8X-QA-iWF" secondAttribute="bottom" constant="5" id="ey5-DO-e8D"/>
-                                    <constraint firstItem="d0f-op-YTD" firstAttribute="top" secondItem="Jtc-LC-JDC" secondAttribute="bottom" constant="5" id="vnM-A6-cka"/>
+                                    <constraint firstItem="Jtc-LC-JDC" firstAttribute="leading" secondItem="Rwm-pY-wUu" secondAttribute="leading" id="T1j-qk-xUm"/>
+                                    <constraint firstItem="Jtc-LC-JDC" firstAttribute="leading" secondItem="vnh-nt-7oj" secondAttribute="leading" constant="12" id="xf8-UB-9fj"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="vnh-nt-7oj" firstAttribute="top" secondItem="JJf-dh-4ws" secondAttribute="top" constant="5" id="Hds-Jt-MO9"/>
-                            <constraint firstItem="vnh-nt-7oj" firstAttribute="trailing" secondItem="Ndn-A6-Lm4" secondAttribute="trailingMargin" id="NBI-uh-188"/>
-                            <constraint firstItem="vnh-nt-7oj" firstAttribute="leading" secondItem="Ndn-A6-Lm4" secondAttribute="leadingMargin" id="SKG-J5-uN6"/>
-                            <constraint firstItem="JJf-dh-4ws" firstAttribute="bottom" secondItem="vnh-nt-7oj" secondAttribute="bottom" constant="110" id="VJP-Dv-WRs"/>
+                            <constraint firstItem="JJf-dh-4ws" firstAttribute="bottom" secondItem="vnh-nt-7oj" secondAttribute="bottom" constant="110" id="0d2-wV-u8J"/>
+                            <constraint firstItem="vnh-nt-7oj" firstAttribute="trailing" secondItem="Ndn-A6-Lm4" secondAttribute="trailingMargin" id="Ecc-xC-FYA"/>
+                            <constraint firstItem="vnh-nt-7oj" firstAttribute="leading" secondItem="Ndn-A6-Lm4" secondAttribute="leadingMargin" id="FMY-mN-YT8"/>
+                            <constraint firstItem="vnh-nt-7oj" firstAttribute="top" secondItem="JJf-dh-4ws" secondAttribute="top" constant="5" id="pK0-3C-QnL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="JJf-dh-4ws"/>
                     </view>
@@ -76,19 +84,44 @@
         <!--Your Events-->
         <scene sceneID="2co-1b-hFE">
             <objects>
-                <tableViewController id="xwz-5c-4la" sceneMemberID="viewController">
+                <tableViewController id="xwz-5c-4la" customClass="EventTableViewController" customModule="WaFI" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="bug-Uo-xzh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="uMj-5L-rqc">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventTableViewCell" rowHeight="100" id="uMj-5L-rqc" customClass="EventTableViewCell" customModule="WaFI" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uMj-5L-rqc" id="Dyp-aa-IQ0">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="x8C-dR-vy7">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wK-47-jgA">
+                                            <rect key="frame" x="108" y="11" width="251" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ViA-yo-v1m">
+                                            <rect key="frame" x="108" y="40" width="251" height="49"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="eventDetail" destination="ViA-yo-v1m" id="M7x-C2-Nyt"/>
+                                    <outlet property="eventImage" destination="x8C-dR-vy7" id="nxX-Pi-Zkc"/>
+                                    <outlet property="eventName" destination="1wK-47-jgA" id="OI5-bn-ZGU"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -106,7 +139,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yYq-Ra-in6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="462" y="63"/>
+            <point key="canvasLocation" x="461.60000000000002" y="62.518740629685162"/>
         </scene>
         <!--Event-->
         <scene sceneID="tne-QT-ifu">
